# cheeskick-django-backend

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API_DOCUMENTATION.md  ARCHITECTURE.md  CODING_PRACTICES.md  Dockerfile  POSTMAN_GUIDE.md  PROJECT_DESCRIPTION.md  README.md  ROADMAP.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/users/: admin.py  apps.py  managers.py  models.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_options.py
apps/users/tests/: test_models.py
config/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_settings.py
