[tool.poetry]
name = "cheeskick-backend"
version = "0.1.0"
description = "CheesKick Django backend"
authors = ["CheesKick Team"]
readme = "README.md"
packages = [{ include = "config" }, { include = "apps" }]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0"
djangorestframework = "^3.15.0"
psycopg = { version = "^3.2.0", extras = ["binary"] }
django-environ = "^0.11.2"
drf-spectacular = "^0.28.0"
django-redis = "^5.4.0"
celery = "^5.4.0"
redis = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-django = "^4.9.0"
factory-boy = "^3.3.0"
black = "^24.8.0"
ruff = "^0.6.0"
mypy = "^1.11.0"
django-stubs = "^5.0.0"
types-redis = "^4.6.0.20241004"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.mypy]
python_version = "3.11"
plugins = ["mypy_django_plugin.main"]
strict = true

[tool.django-stubs]
django_settings_module = "config.settings"

